# zh-tw-tts-comparison

./: .gitignore  README.md  modal_app.py  pyproject.toml
.github/workflows/: pages.yml
data/: entities_in_test.json  entity_decisions.json  sub_final.json  substitutions.tsv
data/audit/: breezyvoice.json  cosyvoice3.json  moss.json  omnivoice.json  voxcpm2.json
data/quick_test/: sentences.jsonl
data/research/: findings.json
docs/: tts-systems.md
outputs/: AUDIT.md  EVAL_METHOD.md  REPORT.md  results.jsonl
outputs/plots/: mer_stats.csv
scripts/: audit_prep.py  build_pages.py  build_pool.py  build_site.py  deploy_space.py  gen_systems_doc.py  integrate_adapters.py  merge_results.py  plot_best.py  plot_results.py  plot_speed_vram.py  rank_votes.py  report.py  rescore_ensub.py  select_quick_test.py  upload_audio_hf.py  wf_adapters.js  wf_classify.js  wf_eval_method.js  wf_fix.js
site/: index.html  leaderboard.html
spaces/blind-test/: README.md  app.py  pool.json  requirements.txt
tts_compare/: __init__.py  config.py  dataset.py  phonetics.py  scoring.py  substitutions.py
tts_compare/adapters/: __init__.py  base.py  breezyvoice.py  chatterbox.py  cosyvoice3.py  moss.py  omnivoice.py  qwen3tts.py  voxcpm2.py
