[project]
name = "zh-tw-tts-comparison"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "huggingface-hub>=1.21.0",
    "jiwer>=4.0.0",
    "matplotlib>=3.11.0",
    "modal>=1.5.1",
    "opencc-python-reimplemented>=0.1.7",
    "pypinyin>=0.55.0",
    "soundfile>=0.14.0",
]

[dependency-groups]
site = [
    "gradio>=6.19.0",
    "markdown>=3.10.2",
]
